scss/_tasks-and-admonitions.scss
/* ... */
input[type=checkbox] {
	display: inline-block;
	-webkit-appearance: none;
	appearance: none;
	filter: none;
	cursor: pointer;
	width: var.$scale-2;
	height: var.$scale-2;
	vertical-align: -6px;
	background-color: var(--background-primary);
	border-radius: 2px;
	border: 1px solid var(--color-primary-4);
	transition: background-color var.$duration-moderate-2 var.$motion-entrance-expressive;
}

input[type="checkbox"]:focus,
input[type="checkbox"]:hover {
	outline: 0;
	box-shadow: 0 0 0 0.1px rgba(0, 0, 0, 0.1),
				0 0 0 2px rgba(var(--color-checkbox) / .35);
	border-color: rgb(var(--color-checkbox));
}

.mod-cm6 .HyperMD-task-line[data-task] .task-list-item-checkbox {
	margin-left: -4px; // aligns custom checkboxes with relationship lines
	&:focus,
	&:hover {
		box-shadow: none; //removes the box-shadow because it gets clipped otherwise
	}
}

.markdown-preview-view input[type=checkbox] { //vertically align checkboxes in reading view
	transform: translateY(-4px)
}

.markdown-preview-view .task-list-item-checkbox:hover,input[type=checkbox]:hover {
	filter: none;
	filter: brightness(1.1);
	transition: filter var.$duration-moderate-2 var.$motion-entrance-expressive;
}

input[type=checkbox]:checked {
	display: inline-block;
	background: rgb(var(--color-checkbox));
	filter: saturate(1);
	border-color: transparent;
	width: 1rem;
	height: 1rem;
}

input[type=checkbox]:checked:before {
	content: ' ';
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='hsl(36, 20%, 95.1%)' viewBox='0 0 14 14'%3E%3Cpolygon points='5.5 11.9993304 14 3.49933039 12.5 2 5.5 8.99933039 1.5 4.9968652 0 6.49933039'%3E%3C/polygon%3E%3C/svg%3E");
	background-repeat: no-repeat;
	background-position: center center;
	background-size: 100%;
	transform: translateX(.5px) translateY(1px) scale(.75);
	width: 100%;
	height: 100%;
	display: block;
}

input[type=checkbox]:checked:active,input[type=checkbox]:checked:hover {
	filter: brightness(1.1);
	transition: filter var.$duration-moderate-2 var.$motion-entrance-expressive;
}

// Strikethrough from completed to-do lists/checkbox
.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task]:is([data-task="x"]), //Live Preview
.markdown-preview-view ul > li[data-task='x'] {
	text-decoration:none;
	color: var(--text-faint);
}

/* ──────────────────────────── Custom Checkboxes ─────────────────────────── */
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="1"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="B"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="X"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="n"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="⭐"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="a"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="p"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="c"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="W"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="❤"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="s"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="S"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="b"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="I"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="!"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="-"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task=">"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="?"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="<"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="l"],
.markdown-source-view.mod-cm6 .task-list-item-checkbox[data-task="i"],
.markdown-preview-view li[data-task="1"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="B"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="X"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="n"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="⭐"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="a"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="p"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="c"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="W"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="❤"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="s"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="S"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="b"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="I"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="!"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="-"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task=">"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="?"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="<"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="l"] .task-list-item-checkbox:checked,
.markdown-preview-view li[data-task="i"] .task-list-item-checkbox:checked {
	background-color: transparent;
	pointer-events: none;
}

.markdown-source-view.mod-cm6 .task-list-item-checkbox {
	transform: translateY(-1px); //aligns custom icons vertically in LP
}
/* ... */

